--- a/.gitignore
+++ b/.gitignore
@@ -158,4 +158,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Dataset and Labels
 dataset/box_credentials.pass
+dataset/videos/*.mp4
+dataset/videos/*.avi
+dataset/frames/*.jpeg
+dataset/ground_truth_v1/
