--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-matplotlib>=3.6.1
 exif
 tqdm
-numpy
-pandas
-pillow
-scikit-image
-opencv-python==4.8.1.78
-opencv-contrib-python==4.8.1.78
 boxsdk
 openpyxl
 ffmpeg-python
+pandas==2.0.3
+scipy==1.10.1
+scikit-image==0.21.0
+opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
+matplotlib>=3.6.1
