--- a/.gitignore
+++ b/.gitignore
@@ -161,9 +161,10 @@ cython_debug/
 
 # Dataset and Labels
 dataset/box_credentials.pass
-dataset/videos/*.mp4
-dataset/videos/*.MP4
-dataset/videos/*.avi
-dataset/videos/*.AVI
-dataset/frames/*.jpeg
+dataset/**/*.mp4
+dataset/**/*.MP4
+dataset/**/*.avi
+dataset/**/*.AVI
+dataset/**/*.jpeg
+dataset/**/*.jpg
 
