--- a/model/yolov7/requirements.txt
+++ b/model/yolov7/requirements.txt
@@ -8,14 +8,13 @@ Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-torch>=1.7.0,!=1.12.0
-torchvision>=0.8.1,!=0.13.0
 tqdm>=4.41.0
 protobuf<4.21.3
 
 # Logging -------------------------------------
 tensorboard>=2.4.1
 # wandb
+wandb==0.16.6
 
 # Plotting ------------------------------------
 pandas>=1.1.4
@@ -37,3 +36,8 @@ thop  # FLOPs computation
 # albumentations>=1.0.3
 # pycocotools>=2.0  # COCO mAP
 # roboflow
+
+
+--index-url https://download.pytorch.org/whl/cu118
+torch==2.3.0+cu118
+torchvision==0.18.0+cu118
