--- a/model/yolov7/data/manacus-fcat.yaml
+++ b/model/yolov7/data/manacus-fcat.yaml
@@ -3,10 +3,10 @@
 # download command/URL (optional)
 #download: 
 
-# train and val data as 1) directory: path/images/, 2) file: path/images.txt, or 3) list: [path1/images/, path2/images/]
-train: /home/rahul/workspace/eeb/manacus-project/manacus-dynamics/dataset/fcat/yolo/fcat-manacus-v2/images/train.txt        # 880 images from 10 video set
-val:   /home/rahul/workspace/eeb/manacus-project/manacus-dynamics/dataset/fcat/yolo/fcat-manacus-v2/images/validation.txt   # 197 images
-#test:  /home/rahul/workspace/eeb/manacus-project/manacus-dynamics/dataset/ebird/yolo/images/test.txt   # 20288 of 40670 images, submit to https://competitions.codalab.org/competitions/20794
+# Yolo train and val data as 1) directory: path/images/, 2) file: path/images.txt, or 3) list: [path1/images/, path2/images/]
+train: /home/rahul/workspace/vision/manacus-dynamics/dataset/fcat/yolo/fcat-manacus-v4-inter/images/train.txt  # 153674 images from 10 video set
+val:   /home/rahul/workspace/vision/manacus-dynamics/dataset/fcat/yolo/fcat-manacus-v4-inter/images/val.txt    # 19209 images
+test:  /home/rahul/workspace/vision/manacus-dynamics/dataset/fcat/yolo/fcat-manacus-v4-inter/images/test.txt   # 19210 
 
 # number of classes
 nc: 3
