--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,5 @@ model/ultralytics/wandb/**
 model/ultralytics/*.pt
 inference/ul/run_y11m_e10_results
 inference/ul/run_y11l_e10_results
+inference/ul/run_y11m_e100_results
+inference/ul/run_y11l_e100_results
